fixed the visibility of the foss united logo on light mode

--- a/styles/index.css
+++ b/styles/index.css
@@ -149,3 +149,7 @@
   border-radius: 12px;
   text-align: left;
 }
+
+.light {
+  filter: invert(1);
+}
